# strassen

./: .gitignore  CMakeLists.txt  README.md
include/: strassen.h  strassen.hpp
test/: CMakeLists.txt
test/src/: TestStrassen.cpp
